# CustomProjects

PhotoPressmark/: CMakeLists.txt  actions.cpp  actions.h  main.cpp  readme.txt
SudokuCounter/: CMakeLists.txt  Sudoku.cpp  Sudoku.h  main.cpp  readme.txt
baseballStats/: Base.cpp  Base.h  Bases.cpp  Bases.h  CMakeLists.txt  Game.cpp  Game.h  IRandomize.h  Pitching.cpp  Pitching.h  Player.cpp  Player.h  Skills.h  StdRandomize.cpp  StdRandomize.h  Team.cpp  Team.h  Types.h  main.cpp  readme.txt
